[package]
name = "roz-server"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[features]
# Phase 26 Plan 26-11 — expose `emit_session_event_for_tests` as a public
# wrapper around the `pub(crate)` `emit_session_event` converter path so the
# SC5 fixture in `tests/export_roundtrip.rs` can drive `/roz/session/events`
# traffic through the production integration path (not via direct
# `ChannelKey::SessionEvents` injection). Off by default; enabled only under
# `cargo test -p roz-server --features test-helpers`.
#
# Phase 26.2 Plan 05 (REVIEWS.md H1): transitively activates
# `roz-agent/test-helpers` so the deterministic mock provider at
# `roz_agent::model::mock_provider_v1` (relocated from roz-test per Plan 03)
# is reachable from `tests/mcap_agent_session_live.rs`. Without this
# propagation the integration test would not see the `pub use` re-export.
test-helpers = ["roz-agent/test-helpers"]

[dependencies]
roz-core = { path = "../roz-core" }
roz-db = { path = "../roz-db" }
roz-mcp = { path = "../roz-mcp" }
roz-nats = { path = "../roz-nats" }
roz-agent = { path = "../roz-agent" }
roz-openai = { path = "../roz-openai" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
logfire = { workspace = true }
figment = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
governor = { workspace = true }
restate-sdk = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
cron = { workspace = true }
tonic = { workspace = true, features = ["tls-native-roots", "tls-ring"] }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
eventsource-stream = "0.2"
hickory-resolver = { workspace = true }
object_store = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
semver = { workspace = true }
serde_yaml = { workspace = true }
secrecy = { workspace = true }
# Phase 26 OBS-01 — per-session MCAP writer (unified observability).
mcap = { workspace = true }
# Phase 26 OBS-01 D-04 — EnumSet type for mcap::read::Options (IgnoreEndMagic
# recovery mode). `mcap` depends on `enumset` transitively but does not re-
# export it; recovery.rs needs a direct use.
enumset = { workspace = true }
# Phase 23 Plan 23-04 — verifying-key LRU cache (D-11).
moka = { workspace = true }
# Phase 23 Plan 23-04 — VerifyingKey type held in the cache value slot.
ed25519-dalek = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
roz-test = { path = "../roz-test" }
roz-worker = { path = "../roz-worker" }
roz-copper = { path = "../roz-copper", default-features = false }
roz-local = { path = "../roz-local" }
roz-proto = { path = "../roz-proto" }
nkeys = { workspace = true }
proptest = "1.6"
image = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

# Phase 26 Plan 26-11 — SC5 fixture imports `emit_session_event_for_tests`,
# which is gated behind the `test-helpers` feature. Declaring
# `required-features` tells cargo to skip this test target when the feature
# is not enabled (so `cargo clippy -p roz-server --all-targets -- -D warnings`
# is clean without the flag, matching the workspace CI pattern).
[[test]]
name = "export_roundtrip"
required-features = ["test-helpers"]

# Phase 26.2 Plan 05 — mcap_agent_session_live drives a 1-turn mock-provider
# agent session via roz-agent's AgentLoop + SessionRuntime (Path B), subscribes
# spawn_cloud_ingestors to the MCAP writer, and asserts presence of all D-10
# required SessionEvent variants (TurnStarted, ModelCallCompleted,
# ToolCall{Requested,Started,Finished}, TurnFinished). Requires the
# `test-helpers` feature; per REVIEWS.md H1 the mock provider lives at
# `roz_agent::model::mock_provider_v1` behind `roz-agent/test-helpers`,
# which roz-server's `test-helpers` feature transitively activates.
# Gating matches the export_roundtrip pattern so `cargo clippy -p roz-server
# --all-targets -- -D warnings` stays clean without the flag.
[[test]]
name = "mcap_agent_session_live"
required-features = ["test-helpers"]
