[package]
name = "roz-server"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[features]
# Phase 26 Plan 26-11 — expose `emit_session_event_for_tests` as a public
# wrapper around the `pub(crate)` `emit_session_event` converter path so the
# SC5 fixture in `tests/export_roundtrip.rs` can drive `/roz/session/events`
# traffic through the production integration path (not via direct
# `ChannelKey::SessionEvents` injection). Off by default; enabled only under
# `cargo test -p roz-server --features test-helpers`.
#
# Phase 26.2 Plan 05 (REVIEWS.md H1): transitively activates
# `roz-agent/test-helpers` so the deterministic mock provider at
# `roz_agent::model::mock_provider_v1` (relocated from roz-test per Plan 03)
# is reachable from `tests/mcap_agent_session_live.rs`. Without this
# propagation the integration test would not see the `pub use` re-export.
test-helpers = ["roz-agent/test-helpers"]

[dependencies]
roz-core = { path = "../roz-core" }
roz-db = { path = "../roz-db" }
roz-mcp = { path = "../roz-mcp" }
roz-nats = { path = "../roz-nats" }
roz-agent = { path = "../roz-agent" }
roz-openai = { path = "../roz-openai" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
logfire = { workspace = true }
figment = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
governor = { workspace = true }
restate-sdk = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
cron = { workspace = true }
tonic = { workspace = true, features = ["tls-native-roots", "tls-ring"] }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
eventsource-stream = "0.2"
hickory-resolver = { workspace = true }
object_store = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tempfile = { workspace = true }
semver = { workspace = true }
serde_yaml = { workspace = true }
secrecy = { workspace = true }
# Phase 26 OBS-01 — per-session MCAP writer (unified observability).
mcap = { workspace = true }
# Phase 26 OBS-01 D-04 — EnumSet type for mcap::read::Options (IgnoreEndMagic
# recovery mode). `mcap` depends on `enumset` transitively but does not re-
# export it; recovery.rs needs a direct use.
enumset = { workspace = true }
# Phase 23 Plan 23-04 — verifying-key LRU cache (D-11).
moka = { workspace = true }
# Phase 23 Plan 23-04 — VerifyingKey type held in the cache value slot.
ed25519-dalek = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
roz-test = { path = "../roz-test" }
roz-worker = { path = "../roz-worker" }
roz-copper = { path = "../roz-copper", default-features = false }
roz-local = { path = "../roz-local" }
roz-proto = { path = "../roz-proto" }
nkeys = { workspace = true }
proptest = "1.6"
image = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
# Phase 26.3 Plan 08 (SC6): `cross_process_trace_stitch` needs
# `opentelemetry_sdk::propagation::TraceContextPropagator` directly to
# extract the W3C `Context` from NATS headers without routing through
# `Span::current()` (a freshly spawned tokio task has no ambient span,
# so the production helper `extract_and_link_parent` no-ops there). Dev-
# dep only — roz-server itself does not ship the propagator.
opentelemetry_sdk = { workspace = true }

[lints]
workspace = true

# Phase 26 Plan 26-11 — SC5 fixture imports `emit_session_event_for_tests`,
# which is gated behind the `test-helpers` feature. Declaring
# `required-features` tells cargo to skip this test target when the feature
# is not enabled (so `cargo clippy -p roz-server --all-targets -- -D warnings`
# is clean without the flag, matching the workspace CI pattern).
[[test]]
name = "export_roundtrip"
required-features = ["test-helpers"]

# Phase 26.2 Plan 05 — mcap_agent_session_live drives a 1-turn mock-provider
# agent session via roz-agent's AgentLoop + SessionRuntime (Path B), subscribes
# spawn_cloud_ingestors to the MCAP writer, and asserts presence of all D-10
# required SessionEvent variants (TurnStarted, ModelCallCompleted,
# ToolCall{Requested,Started,Finished}, TurnFinished). Requires the
# `test-helpers` feature; per REVIEWS.md H1 the mock provider lives at
# `roz_agent::model::mock_provider_v1` behind `roz-agent/test-helpers`,
# which roz-server's `test-helpers` feature transitively activates.
# Gating matches the export_roundtrip pattern so `cargo clippy -p roz-server
# --all-targets -- -D warnings` stays clean without the flag.
[[test]]
name = "mcap_agent_session_live"
required-features = ["test-helpers"]

# Phase 26.3 Plan 07 — trace_context_roundtrip pins a known root SpanContext
# (trace_id=[0xFF;16], span_id=[0xFE;8], SAMPLED), drives one mock-provider
# agent turn via AgentLoop + SessionRuntime (Path B, forked from
# mcap_agent_session_live.rs), finalizes the MCAP, and asserts every
# /roz/session/events envelope carries the pinned trace_id byte-for-byte.
# Validates SC5 (narrowed per Plan 04 Task 2 — /roz/tool/calls excluded; no
# production ToolCallEvent producer exists today). Reviewer HIGH #7 fix: the
# test body uses `.instrument(root_span).await` on the entire awaited work
# block (RAII guard does not survive `.await`). Same gating pattern as the
# other test-helpers targets.
[[test]]
name = "trace_context_roundtrip"
required-features = ["test-helpers"]

# Phase 26.3 Plan 08 — cross_process_trace_stitch (SC6). In-process rig
# (Task 0 audit chose in-process over subprocess per D/E/F failures)
# pointing at a testcontainer OTel collector; publishes a NATS message
# inside a `tasks.create` span via `roz_nats::trace::inject_trace_headers`,
# subscribes in a sibling tokio task that calls `extract_and_link_parent`
# and opens `worker.execute_task`, then asserts via the collector's JSONL
# that both spans share trace_id and worker.parent_span_id == server.span_id.
# Gating matches the other test-helpers targets.
[[test]]
name = "cross_process_trace_stitch"
required-features = ["test-helpers"]

# Phase 26.4 SC7 regression fence — multi-session fleet-query test.
# Seeds 5 distinct sessions through per-session WriterActors with varying
# tool-call + intervention counts, then runs the canonical fleet query
# `SELECT session_id FROM roz_session_metadata
#    WHERE tool_call_count > 50 AND intervention_count > 0` and asserts
# the returned subset matches the 3 predicted rows. Also covers D-32
# idempotency: `index_session` called twice on one session leaves row
# counts unchanged. Gated behind `test-helpers` to keep the default
# test build free of the testcontainers graph.
[[test]]
name = "session_metadata_fleet_query"
path = "tests/session_metadata_fleet_query.rs"
required-features = ["test-helpers"]

# Phase 26.5 SC7 — mcap_camera_roundtrip. Two ignored integration tests
# drive synthetic foxglove.CompressedVideo frames through the per-session
# WriterActor + re-decode from the MCAP file (R-01 honored). A third
# NON-ignored test (`cross_crate_compressed_video_wire_compat`) closes the
# 26.5-warning-02 silent-field-tag-drift gap by encoding with the worker's
# hand-vendored prost struct and decoding with the server's tonic-generated
# struct. Requires `test-helpers` because roz-worker's internal
# `camera::mcap_relay::CompressedVideo` is reached via the dev-dep already
# declared above.
[[test]]
name = "mcap_camera_roundtrip"
path = "tests/mcap_camera_roundtrip.rs"
required-features = ["test-helpers"]

# Phase 26.7 SC6 — artifact_copper_roundtrip. Drives ArtifactService
# UploadArtifact + DownloadArtifact end-to-end over a real tonic channel
# with axum-injected AuthIdentity + testcontainer Postgres + canonical
# tempdir artifact root. Covers the happy-path digest round-trip plus
# D-34 tampered-digest rejection (partial file cleanup verification).
[[test]]
name = "artifact_copper_roundtrip"
path = "tests/artifact_copper_roundtrip.rs"
required-features = ["test-helpers"]
