[package]
name = "roz-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
roz-core = { path = "../roz-core" }
chrono = { workspace = true }
noxious-client = "1.0.4"
testcontainers = { workspace = true, features = ["http_wait"] }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
zenoh = { workspace = true }
flume = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
