[package]
name = "roz-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
roz-core = { path = "../roz-core" }
chrono = { workspace = true }
noxious-client = "1.0.4"
testcontainers = { workspace = true, features = ["http_wait"] }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
zenoh = { workspace = true }
flume = { workspace = true }
serde_json = { workspace = true }
# Phase 26.3 Plan 07: `make_pinned_span_context` helper constructs a
# `SpanContext` via the base `opentelemetry` crate (not the SDK) so SC5 and
# SC6 integration tests can pin a known W3C trace context before driving an
# agent turn. Plan 01 did not enumerate roz-test as an OTel consumer, but
# this helper needs the base crate directly for `SpanContext::new` and
# `Context::with_remote_span_context`.
opentelemetry = { workspace = true }

[lints]
workspace = true
