[package]
name = "roz-worker"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[dependencies]
roz-core = { path = "../roz-core" }
roz-db = { path = "../roz-db" }
roz-nats = { path = "../roz-nats" }
roz-agent = { path = "../roz-agent" }
sqlx = { workspace = true }
async-nats.workspace = true
tokio = { workspace = true, features = ["full"] }
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
logfire.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
schemars.workspace = true
base64.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
arc-swap = "1"
mcap.workspace = true
sha2.workspace = true
hex.workspace = true
crc32fast.workspace = true
ed25519-dalek.workspace = true
reqwest.workspace = true
roz-copper = { path = "../roz-copper", default-features = false }
roz-local = { path = "../roz-local" }
tokio-util.workspace = true
futures = "0.3"
bytes = "1"
str0m = { workspace = true }
openh264 = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = { workspace = true }
inotify = { workspace = true }

[dev-dependencies]
tempfile = "3"
roz-test = { path = "../roz-test" }
rand = { workspace = true }

[lints]
workspace = true
