[package]
name = "roz-worker"
version.workspace = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[features]
default = []
# Enables the signed-AOT WASM load path (wasm_trust module). Passes the
# feature through to roz-copper so Module::deserialize compiles.
aot = ["roz-copper/aot"]
# Enables the Zenoh edge-horizontal transport (Phase 15). Links roz-zenoh and
# the zenoh crate so worker main can call roz_zenoh::session::open_session and
# name zenoh::Session at the capture site.
zenoh = ["dep:roz-zenoh", "dep:zenoh"]

[dependencies]
roz-core = { path = "../roz-core" }
roz-db = { path = "../roz-db" }
roz-nats = { path = "../roz-nats" }
roz-agent = { path = "../roz-agent" }
sqlx = { workspace = true }
async-nats.workspace = true
tokio = { workspace = true, features = ["full"] }
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
logfire.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
schemars.workspace = true
base64.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
arc-swap = "1"
moka = { workspace = true }
mcap.workspace = true
# Phase 26-12 OBS-01 wire-format migration: worker publishes prost-encoded
# `roz.v1.TelemetryUpdate` instead of serde_json on `telemetry.{worker_id}.state`.
# `build.rs` generates the `roz.v1` module from proto/roz/v1/agent.proto.
prost = "0.13"
prost-types = "0.13"
tonic = "0.13"
tokio-stream = "0.1"
sha2.workspace = true
hex.workspace = true
crc32fast.workspace = true
ed25519-dalek.workspace = true
reqwest.workspace = true
directories.workspace = true
secrecy.workspace = true
roz-copper = { path = "../roz-copper", default-features = false }
roz-local = { path = "../roz-local" }
roz-mavlink = { path = "../roz-mavlink" }
roz-zenoh = { path = "../roz-zenoh", optional = true }
zenoh = { workspace = true, optional = true }
tokio-util.workspace = true
futures = "0.3"
bytes = "1"
str0m = { workspace = true }
openh264 = { workspace = true }
image = { workspace = true }
object_store = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
v4l = { workspace = true }
inotify = { workspace = true }

[build-dependencies]
# Phase 26-12 OBS-01: compile proto/roz/v1/agent.proto to `roz.v1` module
# (TelemetryUpdate, Pose, JointState). Server/client codegen disabled —
# worker only encodes/decodes these messages, never hosts gRPC.
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
roz-test = { path = "../roz-test" }
# Phase 26-12 OBS-01: integration test `tests/telemetry_proto_reaches_mcap.rs`
# drives the worker → NATS → ingest_cloud → MCAP chain end-to-end. `test-helpers`
# exposes `spawn_session_telemetry_ingest_for_tests` as a public wrapper around
# the `pub(crate)` ingest fn.
roz-server = { path = "../roz-server", features = ["test-helpers"] }
tokio-util = { workspace = true }
rand = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
# Plan 24-17 phase24_e2e outage test reaches for `Toxic` / `ToxicKind` /
# `StreamDirection` directly. `roz-test::toxiproxy` already depends on
# `noxious-client` for its admin-API client; mirror the pattern used in
# `crates/roz-zenoh/Cargo.toml` dev-dependencies.
noxious-client = "1.0.4"
# Phase 26.5 SC6 (plan 07): `observability_config::tests` parses TOML fixtures
# to verify the nested `[observability.camera]` section deserializes.
toml = { workspace = true }
# Phase 26.7 SC4 (plan 04): `config::tests::config_observability_loads_nested_copper_overrides`
# uses `figment::Jail` for env-var isolation. `Jail` is gated behind the
# `test` feature upstream; enable it only for dev-deps so runtime builds
# stay minimal.
figment = { workspace = true, features = ["env", "toml", "test"] }

[lints]
workspace = true
