[package]
name = "roz-zenoh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
zenoh = "1"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
