[package]
name = "roz-zenoh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
roz-core = { path = "../roz-core" }
zenoh = { workspace = true }
flume = { workspace = true }
parking_lot = { workspace = true }
ed25519-dalek = { workspace = true }
hex = "0.4"
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
rand = { workspace = true }
roz-test = { path = "../roz-test" }
futures = { workspace = true }
sysinfo = "0.32"

[lints]
workspace = true
